--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "dev_win" : "concurrently tsc -w & nodemon dist/index.js",
+    "prod": "nodemon dist/index.js",
     "dev": "tsc -w & nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,6 +21,7 @@
   "devDependencies": {
     "@types/express": "^5.0.0",
     "@types/mongodb": "^4.0.6",
+    "concurrently": "^9.0.1",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
   }
