--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev_win" : "concurrently tsc -w & nodemon dist/index.js",
+    "dev_win": "concurrently tsc -w & nodemon dist/index.js",
     "prod": "nodemon dist/index.js",
     "dev": "tsc -w & nodemon dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -22,6 +22,7 @@
     "@types/express": "^5.0.0",
     "@types/mongodb": "^4.0.6",
     "concurrently": "^9.0.1",
+    "dotenv": "^16.4.5",
     "nodemon": "^3.1.7",
     "typescript": "^5.6.3"
   }
