--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc && node src",
     "dev_win": "concurrently tsc -w & nodemon dist/index.js",
     "prod": "nodemon dist/index.js",
     "dev": "tsc -w & nodemon dist/index.js",
